i hope now works